--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,138 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Careers Site</title>
-  <!-- Bootstrap CSS -->
+  <title>FORUM Careers - Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <style>
+    .hero {
+      background: linear-gradient(135deg, #0d6efd, #6610f2);
+      color: white;
+      padding: 100px 20px;
+      text-align: center;
+    }
+    .hero h1 {
+      font-weight: 700;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+    .btn-lg {
+      padding: 12px 30px;
+      font-size: 1.1rem;
+      border-radius: 8px;
+    }
+    .features {
+      padding: 60px 20px;
+    }
+    .feature-box {
+      background: #f8f9fa;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+      transition: all 0.3s ease;
+    }
+    .feature-box:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <!-- 🌐 Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="index.html">FORUM</a>
-      <div>
-        <a href="jobs.html" class="btn btn-outline-light">View Jobs</a>
+      <a class="navbar-brand fw-bold" href="index.html">Forum Careers</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+              data-bs-target="#navbarNav" aria-controls="navbarNav" 
+              aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="jobs.html">Jobs</a></li>
+          <li class="nav-item"><a class="nav-link" href="applications.html">My Applications</a></li>
+          <li class="nav-item" id="authLinks"></li>
+        </ul>
       </div>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <section class="text-center py-5 bg-light">
+  <section class="hero">
     <div class="container">
-      <h1 class="display-5 fw-bold">Join Our Team</h1>
-      <p class="lead">Discover exciting career opportunities with us.</p>
-      <a href="jobs.html" class="btn btn-primary btn-lg">Browse Jobs</a>
+      <h1 class="display-4">FORUM Careers</h1>
+      <p>Find your dream job with leading companies. Connect, apply, and grow your career.</p>
+      <div id="heroButtons">
+        <a href="auth.html" class="btn btn-light btn-lg me-3">Login / Sign Up</a>
+        <a href="jobs.html" class="btn btn-warning btn-lg">Browse Jobs</a>
+      </div>
     </div>
   </section>
+
+  <!-- Features Section -->
+  <section class="features">
+    <div class="container text-center">
+      <h2 class="mb-5">Why Choose FORUM?</h2>
+      <div class="row g-4">
+        <div class="col-md-4">
+          <div class="feature-box">
+            <h4>Trusted Companies</h4>
+            <p>We partner with top MNCs and startups to bring verified job opportunities.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="feature-box">
+            <h4>Easy Application</h4>
+            <p>Apply directly online with a smooth and simple application process.</p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="feature-box">
+            <h4>Career Growth</h4>
+            <p>Explore opportunities across industries and enhance your professional journey.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <script>
+    // ✅ Check if user logged in
+    const token = localStorage.getItem("token");
+    const user = JSON.parse(localStorage.getItem("user"));
+
+    const authLinks = document.getElementById("authLinks");
+    const heroButtons = document.getElementById("heroButtons");
+
+    if (token && user) {
+      // Show welcome message + logout
+      authLinks.innerHTML = `
+       
+        <a class="nav-link" href="#" id="logoutBtn">Logout</a>
+      `;
+
+      // Change hero section button
+      heroButtons.innerHTML = `
+        <h3 class="mt-4">Welcome back, ${user.name}! 🎉</h3>
+        <a href="jobs.html" class="btn btn-warning btn-lg mt-3">Browse Jobs</a>
+      `;
+    } else {
+      // Show login/signup links
+      authLinks.innerHTML = `<a class="nav-link" href="auth.html">Login / Sign Up</a>`;
+    }
+
+    // 🔑 Logout functionality
+    document.addEventListener("click", (e) => {
+      if (e.target.id === "logoutBtn") {
+        localStorage.removeItem("token");
+        localStorage.removeItem("user");
+        alert("Logged out successfully!");
+        window.location.href = "index.html";
+      }
+    });
+  </script>
+
 </body>
 </html>
